Updated at hyperdev.com

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to HyperDev!</title>
+    <title>Alien Extinction Riddle Simulation by @JFTActual (twitter)</title>
     <meta name="description" content="A cool thing made with HyperDev">
     <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -21,17 +21,17 @@
   <body>
     <header>
       <h1>
-        A Dream of the Future
+        Alien Extinction Riddle Simulation 
       </h1>
+      <h4>
+        by <a href="http://www.twitter.com/JFTActual" target="_blank">@JFTActual</a>
+      </h4>
+      <h3>
+        Hit "F5" or refresh to re-run simulation.
+      </h3>
     </header>
 
     <main>
-      <p class="bold">Oh hi,</p>
-      <p>Tell me your hopes and dreams:</p>
-      <form>
-        <input type="text" maxlength="100" placeholder="Dreams!">
-        <button type="submit">Submit</button>
-      </form>
       <section class="dreams">
         <ul id="dreams">
         </ul>
@@ -39,9 +39,6 @@
     </main>
 
     <footer>
-      <a href="https://hyperdev.com">
-        Remix this in HyperDev
-      </a>
     </footer>
 
     <!-- Your web-app is https, so your scripts need to be too -->
